// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all colors 1`] = `
<DocumentFragment>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-bmmCCE-color-secondary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-gCieqL-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-cbktrZ-color-success c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-kkCveC-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-fWqKPQ-color-warning c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-dQlwmf-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-cgBQIK-color-error c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-bAuLhl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all sizes 1`] = `
<DocumentFragment>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-cmVdgU-size-sm c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-lXiLo-size-lg c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all variants 1`] = `
<DocumentFragment>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-fdQTW-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-hSqWZv-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-fGhvCU c-fGhvCU-jsOpSy-color-primary c-fGhvCU-sKeyg-size-md c-fGhvCU-bDGmTT-isDisabled-false c-fGhvCU-cycqzJ-pill-false c-fGhvCU-kJLEgH-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;
